--- a/src/webparts/complianceOps/ComplianceOpsWebPart.manifest.json
+++ b/src/webparts/complianceOps/ComplianceOpsWebPart.manifest.json
@@ -18,9 +18,9 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "compliance ops" },
+    "title": { "default": "Records compliance opportunities" },
     "description": { "default": "compliance ops description" },
-    "officeFabricIconFontName": "Page",
+    "officeFabricIconFontName": "Admin",
     "properties": {
       "description": "compliance ops"
     }
